@@ -186,6 +186,12 @@ Bug Fixes
 SQLObject 0.7.9
 ===============
 
+Bug Fixes
+---------
+
+* Remove 'limit' from SelectResults after setting start/end so .clone()
+  never see limit again.
+
 Other Changes
 -------------
 
